--- a/index.html
+++ b/index.html
@@ -101,20 +101,79 @@
               Plant<span class="text-green-700">.</span>
             </div>
             <div>
-              <img src="https://image.flaticon.com/icons/svg/497/497348.svg" alt="" class="w-8">
+              <img
+                src="https://image.flaticon.com/icons/svg/497/497348.svg"
+                alt=""
+                class="w-8"
+              />
             </div>
           </nav>
-          <header class="container px-4 lg:flex mt-10 items-center h-full lg:mt-0">
+          <header
+            class="container px-4 lg:flex mt-10 items-center h-full lg:mt-0"
+          >
             <div class="w-full">
-              <h1 class="text-4xl lg:text-6xl font-bold">Find your <span class="text-green-700">greeny</span> stuff for your room</h1>
+              <h1 class="text-4xl lg:text-6xl font-bold">
+                Find your <span class="text-green-700">greeny</span> stuff for
+                your room
+              </h1>
               <div class="w-20 h-2 bg-green-700 my-4"></div>
-              <p class="text-xl mb-10">Lorem ipsum dolor consectetur adipisicing elit. Recusandae maiores neque eaque ea odit placeat, tenetur illum distinctio nulla voluptatum a corrupti beatae tempora aperiam quia id aliquam possimus aut.</p>
-              <button class="bg-green-500 text-white text-2xl font-medium px-4 py-2 rounded shadow">Learn More</button>
+              <p class="text-xl mb-10">
+                Lorem ipsum dolor consectetur adipisicing elit. Recusandae
+                maiores neque eaque ea odit placeat, tenetur illum distinctio
+                nulla voluptatum a corrupti beatae tempora aperiam quia id
+                aliquam possimus aut.
+              </p>
+              <button
+                class="bg-green-500 text-white text-2xl font-medium px-4 py-2 rounded shadow"
+              >
+                Learn More
+              </button>
             </div>
           </header>
         </div>
       </div>
-      <img src="https://images.unsplash.com/photo-1536147116438-62679a5e01f2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Leafs" class="w-full h-48 object-cover sm:h-screen sm:w-4/12">
+      <img
+        src="https://images.unsplash.com/photo-1536147116438-62679a5e01f2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
+        alt="Leafs"
+        class="w-full h-48 object-cover sm:h-screen sm:w-4/12"
+      />
+    </div>
+
+    <div
+      class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
+    >
+      <a href="#">
+        <h5
+          class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
+        >
+          Noteworthy technology acquisitions 2021
+        </h5>
+      </a>
+      <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+        Here are the biggest enterprise technology acquisitions of 2021 so far,
+        in reverse chronological order.
+      </p>
+      <a
+        href="#"
+        class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+      >
+        Read more
+        <svg
+          class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 14 10"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M1 5h12m0 0L9 1m4 4L9 9"
+          />
+        </svg>
+      </a>
     </div>
   </body>
 </html>
